# elektron_plot

./: Cargo.toml  README.md
.github/workflows/: deploy.yml
files/: summe.kicad_sch
src/: border.rs  cairo_plotter.rs  error.rs  lib.rs  pcb.rs  schema.rs  theme.rs
